# cookiecutter-pypackage

./: cookiecutter.json
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: HISTORY.md  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/.github/: pull_request_template.md
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
